After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668542 - [0.11] EncodingProfileClass is missing from GstPbutils-0.11.gir
[0.11] EncodingProfileClass is missing from GstPbutils-0.11.gir
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.11.x
Other Linux
: Normal normal
: 0.11.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-23 23:14 UTC by Jens Georg
Modified: 2012-03-20 10:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pbutils: make encoding profile classes opaque (5.27 KB, patch)
2012-03-14 14:53 UTC, Tim-Philipp Müller
committed Details | Review

Description Jens Georg 2012-01-23 23:14:12 UTC
All of its child classes seem to have the necessary <alias> entries but for some non-obvious reason (at least for me) the alias from EncodingProfileClass to GObject.ObjectClass is missing.
Comment 1 Wim Taymans 2012-02-20 14:28:37 UTC
Can you make a patch? what needs to be done?
Comment 2 Tim-Philipp Müller 2012-03-14 14:53:41 UTC
Created attachment 209719 [details] [review]
pbutils: make encoding profile classes opaque

Does this help at all?
Comment 3 Tim-Philipp Müller 2012-03-19 19:58:22 UTC
Jens: ping?
Comment 4 Tim-Philipp Müller 2012-03-19 20:14:32 UTC
Or: how can I check whether this worked, other than looking intently at the .gir file? What is it supposed to enable / make work in python?
Comment 5 Jens Georg 2012-03-19 20:24:29 UTC
Sorry, checking.
Comment 6 Jens Georg 2012-03-19 21:23:18 UTC
Looks like that patch makes things worse. Additionally it seems to be fixed without this patch.
Comment 7 Tim-Philipp Müller 2012-03-19 21:38:26 UTC
So what is "it" actually?

I don't know why it would make anything worse. Surely g-i can handle opaque instance/class structures?
Comment 8 Jens Georg 2012-03-20 07:36:07 UTC
Sorry; I got confused with my branches and checkouts. The patch fixes the problem indeed.
Comment 9 Tim-Philipp Müller 2012-03-20 10:52:43 UTC
This bug feels a bit like a Kafka novel. I still have no idea what "the problem" actually was ;)

Great to hear the patch helps though, I'll push that then:

 commit dfb244fb507163c71bd99a78ad6b9e05a0f5030c
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Wed Mar 14 14:51:22 2012 +0000

    pbutils: make encoding profile classes opaque
    
    Don't typedef them to GObjectClass directly, but hide behind
    private structs. Fixes issues with gobject-introspection
    and GstEncodingProfileClass.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=668542