pbutils: make encoding profile classes opaque

Don't typedef them to GObjectClass directly, but hide behind
private structs. Fixes issues with gobject-introspection
and GstEncodingProfileClass.

https://bugzilla.gnome.org/show_bug.cgi?id=668542